tests/broken/invalid-statement.stderr
error: Expected one of: if, elseif, else, endif, for, endfor
 --> tests/broken/invalid-statement.rs:4:18
  |
4 | #[oxiplate = "{% thisdoesntexist %}"]
  |                  ^^^^^^^^^^^^^^^^^^
